--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,23 +1,23 @@
 <h1>Listing projects</h1>
 
-<table>
+<table rules="rows">
   <tr>
     <th>Name</th>
     <th></th>
-    <th></th>
+    <th>Menu</th>
     <th></th>
   </tr>
 
 <% @projects.each do |project| %>
   <tr>
-    <td><%= project.name %></td>
-    <td><%= link_to 'Show', project %></td>
-    <td><%= link_to 'Edit', edit_project_path(project) %></td>
-    <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td height="30"><%= project.name %>&nbsp&nbsp</td>
+    <td>&nbsp&nbsp<%= link_to 'Show', project %>&nbsp&nbsp</td>
+    <td>&nbsp&nbsp<%= link_to 'Edit', edit_project_path(project) %>&nbsp&nbsp</td>
+    <td>&nbsp&nbsp<%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp&nbsp</td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Project', new_project_path %>
+<%= link_to 'Create New Project', new_project_path %>
