--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,21 +3,19 @@
 <table rules="rows">
   <tr>
     <th>Name</th>
-    <th></th>
-    <th>Menu</th>
-    <th></th>
+    <th colspan="2">Menu</th>
   </tr>
 
 <% @projects.each do |project| %>
   <tr>
-    <td height="30"><%= project.name %>&nbsp&nbsp</td>
-    <td>&nbsp&nbsp<%= link_to 'Show', project %>&nbsp&nbsp</td>
-    <td>&nbsp&nbsp<%= link_to 'Edit', edit_project_path(project) %>&nbsp&nbsp</td>
-    <td>&nbsp&nbsp<%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp&nbsp</td>
+    <td height="30"><%= link_to project.name, project %>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td height="30"><%= link_to 'Edit', edit_project_path(project) %>&nbsp;&nbsp;</td>
+    <td height="30"><%= link_to 'Delete', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'Create New Project', new_project_path %>
+<%= link_to 'Create New Project', new_project_path %> |
+<a href="../../">Home</a>
