議事録をscaffoldで作成

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Meeting Management System Home</h1>
 <p><a href="../projects/">projects</a></p>
 <p><a href="../meetings/">meetings</a></p>
+<p><a href="../minutes/">minutes</a></p>
