--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,16 +22,30 @@
     <td><%= @project.name %></td>
   </tr>
   <tr>
-    <th>プロジェクト開始日</th>
+    <th>開始日</th>
     <td><%= @project.start_date %></td>
   </tr>
   <tr>
-    <th>プロジェクト終了日</th>
+    <th>終了日</th>
     <td><%= @project.end_date %></td>
   </tr>
   <tr>
-    <th>プロジェクト管理者</th>
+    <th>管理者</th>
     <td><%= @project.manager_id %></td>
   </tr>
+
+  <tr>
+    <th>目的</th>
+    <td><%= @project.purpose %></td>
+  </tr>
+
+  <tr>
+    <th>ステータス</th>
+    <td><%= @project.sts %></td>
+  </tr>
+
+
+
+
 </table>
 
