日本語化とMeetingsのエラー箇所の修正

--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing meeting</h1>
+<h1>ミーティングの編集</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @meeting %> |
-<%= link_to 'Back', meetings_path %>
+<%= link_to '詳細情報参照', @meeting %> |
+<%= link_to '戻る', meetings_path %>
