--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -12,37 +12,42 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :project_id %><br />
+    プロジェクト<br />
     <%= f.text_field :project_id %>
   </div>
   <div class="field">
-    <%= f.label :title %><br />
+    議題<br />
     <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :host_user_id %><br />
-    <%= f.text_field :host_user_id %>
+  </div  <div class="field">
+    目的<br />
+    <%= f.text_area :purpose %>
   </div>
   <div class="field">
     <table>
       <tr>
-        <td><%= f.label :date %></td>
-        <td><%= f.label :start %></td>
-        <td><%= f.label :end %></td>
+        <td>開催日: </td>
+        <td><%= f.date_select :meeting_date, :use_month_numbers => true %></td>
       </tr>
       <tr>
-        <td><%= f.text_field :date, :size => "20px" %></td>
-        <td><%= f.select :start_time, [["09:00", "9:00"], ["10:00", "10:00"], ["11:00", "11:00"], ["12:00", "12:00"]],  :include_blank => true %></td>
-        <td><%= f.select :end_time, [["10:00", "10:00"], ["11:00", "11:00"], ["12:00", "12:00"], ["13:00", "13:00"]],  :include_blank => true %></td>
+        <td>開始時間: </td>
+        <td><%= f.time_select :start_time, :use_month_numbers => true %></td>
+      </tr>
+      <tr>
+        <td>終了時間: </td>
+        <td><%= f.time_select :end_time, :use_month_numbers => true %></td>
       </tr>
     </table>
   </div>
   <div class="field">
-    <%= f.label :purpose %><br />
-    <%= f.text_area :purpose %>
+    開催場所<br />
+    <%= f.text_field :place %>
   </div>
   <div class="field">
-    <%= f.hidden_field :create_user_id, :value => "test_user" %>
+    主催者<br />
+    <%= f.text_field :host_user_id %>
+  </div>
+  <div class="field">
+    <%= f.hidden_field :create_user_id, :value => current_user.id %>
   </div>
   <div class="actions">
     <%= f.submit %>
