・入力チェックを追加 ・時刻表示を指定 ・Meeting表示順序を指定

--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,5 +1,6 @@
-<h1><%= @title %></h1>
 <p><%= @msg %></p>
+<h1><%= @title %></h1>
+<p><%= @info %></p>
 <%= form_for(@meeting, :url => {:action => 'edit'}) do |f| %>
 
   <% if @meeting.errors.any? %>
