Meetingのスキーマ整理

--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -45,8 +45,8 @@
       <td><%= f.text_field :place %></td>
     </tr>
     <tr>
-      <th><%= f.label :host_user_id, '主催者' %></th>
-      <td><%= f.text_field :host_user_id %></td>
+      <th><%= f.label :user_id, '主催者' %></th>
+      <td><%= f.text_field :user_id %></td>
     </tr>
     <tr>
       <% options = ["開催待ち", "議事録作成待ち", "議事録確認依頼中", "完了"] %>
