--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -50,7 +50,7 @@
     <tr>
       <th>主催者</th>
       <td>
-        <%= select_tag 'meeting[host_user_id]', options_from_collection_for_select(@users, :id, :email) %>
+        <%= select_tag 'meeting[user_id]', options_from_collection_for_select(@users, :id, :email) %>
       </td> 
     </tr>
     <tr>
