--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -44,7 +44,7 @@
   </div>
   <div class="field">
     主催者<br />
-    <%= f.text_field :host_user_id %>
+    <%= f.text_field :user_id %>
   </div>
   <div class="field">
     <% options = ["開催待ち", "議事録作成待ち", "議事録確認依頼中", "完了"] %>
