--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,6 +1,11 @@
 <p><%= @msg %></p>
-<h1><%= @title %></h1>
-<p><%= @info %></p>
+
+<div class="header">
+	<h1>ミーティング登録</h1>
+	<p>　　新規にミーティングを登録します。</p>
+</div>
+
+
 <%= form_for(@meeting, :url => {:action => 'new'}) do |f| %>
 
   <% if @meeting.errors.any? %>
