--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,48 +1,3 @@
-/* リセットCSS  */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-
-:focus {
-	outline: 0;
-}
-
-/* remember to highlight inserts somehow! */
-ins {
-	text-decoration: none;
-}
-del {
-	text-decoration: line-through;
-}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
 /* ヘッダ */
 .header {
 	padding: 20px;
@@ -65,6 +20,23 @@ table {
 	font-size: 12px;
 	line-height: 1;
 }
+
+.footer {
+	padding: 20px;
+	background-color: #dfe3e8;
+}
+
+.footer p {
+	margin: 0 0 3px 0;
+	font-size: 12px;
+	line-height: 1.4;
+}
+
+.footer a {
+	color: #666;
+	text-decoration: none;
+}
+
 
 /* メニュー */
 .menu {
