--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,20 +15,30 @@
   <p class="alert alert-error"><%= alert %></p> 
 <% end %>
 
+<div class="header">
+	<h1><%= @title %></h1>
+	<p><%= @catch_phrase %></p>
+</div>
+
+<div align="right">
+	<p class="navbar-text pull-right"> 
+	<% if user_signed_in? %> 
+	  <%= link_to current_user.email, edit_user_registration_path, :class => 'navbar-link' %>さん
+	  <br>
+	  <%= link_to "ログアウト", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> 
+	<% else %> 
+	  <%= link_to "新規ユーザ登録", new_user_registration_path, :class => 'navbar-link'  %>
+	<% end %>
+</div>
+
 <%= yield %>
 
 
 <hr>
-<p class="navbar-text pull-right"> 
-<% if user_signed_in? %> 
-  ログインユーザ： <strong><%= current_user.email %></strong>. 
-  <%= link_to 'ユーザ情報変更', edit_user_registration_path, :class => 'navbar-link' %> | 
-  <%= link_to "ログアウト", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> 
-<% else %> 
-  <%= link_to "ユーザ登録", new_user_registration_path, :class => 'navbar-link'  %> | 
-  <%= link_to "ログイン", new_user_session_path, :class => 'navbar-link'  %> 
-<% end %>
 
+<div class="footer">
+	<p>Copyright &copy; MMS Developer Group</p>
+</div>
 
 
 </body>
