--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for(@meeting, :url => {:action => 'edit'}) do |f| %>
+<%= form_for(@meeting) do |f| %>
 
   <% if @meeting.errors.any? %>
     <div id="error_explanation">
@@ -43,8 +43,10 @@
       <td><%= f.text_field :place %></td>
     </tr>
     <tr>
-      <th><%= f.label :user_id, '主催者' %></th>
-      <td><%= f.text_field :user_id %></td>
+      <th>主催者</th>
+      <td>
+        <%= select_tag 'meeting[user_id]', options_from_collection_for_select(@users, :id, :email, @current_user_idx) %>
+      </td>
     </tr>
     <tr>
       <% options = ["開催待ち", "議事録作成待ち", "議事録確認依頼中", "完了"] %>
@@ -61,6 +63,6 @@
 
 <% end %>
 
-<%= link_to '議事録', url_for(:controller => "minutes", :action => "show", :id => @meeting.id) %> |
-<%= link_to '詳細情報参照', @meeting %> |
-<%= link_to '戻る', meetings_path %>
+
+<%= link_to '[詳細に戻る]', @meeting %> |
+<%= link_to '[一覧に戻る]', meetings_path %>
