--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -25,8 +25,8 @@
 
 <br />
 
-<%= link_to '新規作成', new_meeting_path %> |
-<a href="../../">メニュー</a>
+<%= link_to '[新規作成]', new_meeting_path %> |
+<a href="../../">[HOME]</a>
 
 <%= javascript_include_tag 'meetings' %>
 
