--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,5 +1,10 @@
 
+<%= form_for(@meeting) do |f| %>
+<%
+=begin %>
 <%= form_for(@meeting, :url => {:action => 'new'}) do |f| %>
+<%
+=end %>
 
   <% if @meeting.errors.any? %>
     <div id="error_explanation">
@@ -17,7 +22,7 @@
     <tr>
       <th>プロジェクト</th>
       <td>
-        <%= select_tag 'meeting[project_id]', options_from_collection_for_select(@projects, :id, :name) %>
+        <%= select_tag 'meeting[project_id]', options_from_collection_for_select(@projects, :id, :name, 0) %>
       </td>
     </tr>
     <tr>
@@ -75,4 +80,4 @@
   </div>
 
 <% end %>
-<%= link_to '戻る', meetings_path %>
+<%= link_to '一覧に戻る', meetings_path %>
