--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
 	<br>
 	<h2>■管理者MENU</h2>
 	<li><%= link_to 'プロジェクト管理', { :controller => 'projects', :action => 'index'}  %></li>
+	<li><%= link_to 'プロジェクト管理（ユーザ）', { :controller => 'project_users', :action => 'index'}  %></li>
 </div>
 
 
