--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,3 +1,5 @@
+<%= render "projects/errors", obj: @project %>
+
 <%= form_for(@project) do |f| %>
   <% if @project.errors.any? %>
     <div id="error_explanation">
@@ -46,10 +48,12 @@
     <%= f.select :sts, options %>
   </div>
 
+<!--
   <div class="field">
     添付ファイル<br />
    <%= f.file_field :upload_file %>
   </div>
+-->
 
   <div class="actions">
     <%= f.submit %>
