--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,7 +22,7 @@
      <td height="30", width="100"><%= project.sts  %></td>
      <td>
        <%= link_to '編集', edit_project_path(project) %> |
-       <%= link_to '削除', project, method: :delete, data: { confirm: 'Are you sure?' } %>
+       <%= link_to '削除', project_path(project), :method => :delete, data: { confirm: 'Are you sure?' } %>
     </td>
   </tr>
 <% end %>
