--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,13 @@
-
 <div class="menu">
 	<h2>■MENU</h2>
 	<li><%= link_to 'ミーティング管理', { :controller => 'meetings', :action => 'index'}  %></li>
 	<li><%= link_to '議事録管理（将来的にミーティングに統合？）', { :controller => 'minutes', :action => 'index'}  %></li>
 	<br>
+    <% if current_user.role == "admin" then %>
 	<h2>■管理者MENU</h2>
 	<li><%= link_to 'プロジェクト管理', { :controller => 'projects', :action => 'index'}  %></li>
 	<li><%= link_to 'プロジェクト管理（ユーザ登録）', { :controller => 'project_users', :action => 'index'}  %></li>
+    <% end %>
 </div>
 
 
