ユーザのメールアドレスではなく、名前を表示させるように修正。

--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -45,7 +45,7 @@
     <tr>
       <th>主催者</th>
       <td>
-        <%= select_tag 'meeting[user_id]', options_from_collection_for_select(@users, :id, :email, @current_user_idx) %>
+        <%= select_tag 'meeting[user_id]', options_from_collection_for_select(@users, :id, :user_name, @current_user_idx) %>
       </td>
     </tr>
     <tr>
