--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -44,7 +44,7 @@
     <td height="30"><%= meeting.meeting_date %>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td height="30"><%= meeting.start_time.strftime("%H:%M") %>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td height="30"><%= meeting.status %>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-    <td height="30"><%= meeting.user.email %>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td height="30"><%= meeting.user.user_name %>&nbsp;&nbsp;&nbsp;&nbsp;</td>
   </tr>
 <% end %>
 </table>
