--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,33 +20,20 @@
 	<p><%= @catch_phrase %></p>
 </div>
 
-<div align="right">
-	<p class="navbar-text pull-right"> 
-	<% if user_signed_in? %> 
-	  <%= link_to current_user.email, edit_user_registration_path, :class => 'navbar-link' %>さん
-	  <br>
-	  <%= link_to "ログアウト", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> 
-	<% else %> 
-	  <%= link_to "新規ユーザ登録", new_user_registration_path, :class => 'navbar-link'  %>
-	<% end %>
-</div>
-
 <%= yield %>
 
 
 <hr>
 
-<!-- ここから -->
 <p class="navbar-text pull-right"> 
 <% if user_signed_in? %> 
-  Logged in as <strong><%= current_user.email %> : <%= current_user.role %></strong>. 
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> | 
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> 
+  ログインユーザ： <strong><%= current_user.user_name %> (<%= current_user.role %>)</strong>. 
+  <%= link_to '登録情報の変更', edit_user_registration_path, :class => 'navbar-link' %> | 
+  <%= link_to "ログアウト", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> 
 <% else %> 
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> | 
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %> 
+  <%= link_to "ユーザ登録", new_user_registration_path, :class => 'navbar-link'  %> | 
+  <%= link_to "ログイン", new_user_session_path, :class => 'navbar-link'  %> 
 <% end %>
-<!-- ここまでは削除予定 -->
 
 <div class="footer">
 	<p>Copyright &copy; MMS Developer Group</p>
