--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -53,7 +53,7 @@
     <tr>
       <th>主催者</th>
       <td>
-        <%= select_tag 'meeting[user_id]', options_from_collection_for_select(@users, :id, :email) %>
+        <%= select_tag 'meeting[user_id]', options_from_collection_for_select(@users, :id, :user_name) %>
       </td> 
     </tr>
     <tr>
@@ -63,7 +63,7 @@
     </tr>
   </table>
   <div class="field">
-    <%= f.hidden_field :create_user_id, :value => current_user.email %>
+    <%= f.hidden_field :create_user_id, :value => current_user.user_name %>
   </div>
   <div class="field">
     <%= f.hidden_field :available, :value => true %>
@@ -72,7 +72,7 @@
     <%= f.hidden_field :update_date, :value => Time.now %>
   </div>
   <div class="field">
-    <%= f.hidden_field :update_user_id, :value => current_user.email %>
+    <%= f.hidden_field :update_user_id, :value => current_user.user_name %>
   </div>
   
   <div class="actions">
