--- a/app/views/minutes/new.html.erb
+++ b/app/views/minutes/new.html.erb
@@ -1,5 +1,33 @@
 <h1>New minute</h1>
+  
+  <%= form_for(@minute) do |minute| %>
+    <% if @minute.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@minute.errors.count, "error") %> prohibited this minute from being saved:</h2>
 
-<%= render 'form' %>
+        <ul>
+        <% @minute.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <p>
+      <b> ミーティングID： </b>
+      <%= @meeting.id %>
+    </p>
+    <div class="field">
+      <%= minute.hidden_field :meeting_id, :value => @meeting.id %>
+    </div>
+    
+    <div class="field">
+      <%= minute.label :detail %><br />
+      <%= minute.text_field :detail %>
+    </div>
+    <div class="actions">
+      <%= minute.submit %>
+    </div>
+  <% end %>
 
 <%= link_to 'Back', minutes_path %>
