--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,32 +1,32 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+﻿<h2>ユーザ情報更新</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div><%= f.label :メールアドレス %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :user_name %><br />
+  <div><%= f.label :ユーザ名 %><br />
   <%= f.text_field :user_name %></div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+  <div><%= f.label :パスワード %> <i>(変更不要なら空のままで)</i><br />
   <%= f.password_field :password, :autocomplete => "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div><%= f.label :パスワード（確認） %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+  <div><%= f.label :現在のパスワード %> <i>(必須)</i><br />
   <%= f.password_field :current_password %></div>
 
-  <div><%= f.submit "Update" %></div>
+  <div><%= f.submit "更新" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>アカウント削除</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+<p><%= button_to "このアカウントを削除する", registration_path(resource_name), :data => { :confirm => "いいんですね？" }, :method => :delete %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "戻る", :back %>
