--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,24 @@
-<h2>Sign up</h2>
+﻿<h2>ユーザ登録</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div><%= f.label :メールアドレス %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :user_name %><br />
+  <div><%= f.label :ユーザ名 %><br />
   <%= f.text_field :user_name %></div>
 
-  <div><%= f.label :password %><br />
+  <div><%= f.label :パスワード %><br />
   <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div><%= f.label :パスワード（確認） %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div>Role Key<br />
+  <div>権限キー（ヒント：admin or user）<br />
   <input type="text" name="role_key" length="10">
 
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= f.submit "登録" %></div>
 <% end %>
 
-<%= render "devise/shared/links" %>
