--- a/app/views/project_users/index.html.erb
+++ b/app/views/project_users/index.html.erb
@@ -12,8 +12,8 @@
 
 <% @project_users.each do |project_user| %>
   <tr>
-    <td><%= project_user.project_id %></td>
-    <td><%= project_user.user_id %></td>
+      <td><%= project_user.project.name if project_user.project %></td>
+      <td><%= project_user.user.user_name if project_user.user %></td>
     <td><%= link_to 'Show', project_user %></td>
     <td><%= link_to 'Edit', edit_project_user_path(project_user) %></td>
 <% if false %>
