--- a/app/views/project_users/_form.html.erb
+++ b/app/views/project_users/_form.html.erb
@@ -18,7 +18,7 @@
     </tr>
     <tr>
       <th>ユーザ</th>
-      <td><%= f.collection_select :user_id, User.all, :id, :email %></td>
+      <td><%= f.collection_select :user_id, User.all, :id, :user_name %></td>
     </tr>
   </table>
 
