目的欄が改行表示されるように修正

--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -17,8 +17,8 @@
 </tr>
 
 <tr>
-  <th>目的:</th>
-  <td><%= @meeting.purpose %></td>
+  <th valign="top">目的:</th>
+  <td valign="top"><%= simple_format(@meeting.purpose) %></td>
 </tr>
 
 <tr>
