--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -72,6 +72,7 @@
 
 <%= link_to '[編集]', edit_meeting_path(@meeting) %> |
 <a href="javascript:void(0)" onclick="doDelete(<%=  @meeting.id %>);">[削除]</a> |
+[<%= link_to '開催通知', url_for( :controller => 'meeting_notification', :action => 'index', :meeting_id => @meeting.id) %>] |
     <% if @minute_id == 'なし' %> 
       [<%= link_to '議事録登録', url_for(:controller => "minutes", :action => "new", :id => @meeting.id) %>]
     <% else %>
