HOMEリンクを削除 頁番号が1から始まるように修正

--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -51,19 +51,19 @@
 
 <br />
 
+Page: 
 <% if @page > 0 then%>
-<a = href="/meetings/index?page=<%=(@page - 1) %>">[<%=(@page - 1) %>]</a>
+<a = href="/meetings/index?page=<%=(@page - 1) %>">[<%=(@page) %>]</a>
 <% end %>
-[<%= @page %>]
+[<%= (@page + 1) %>]
 <% if @record_count > (@page + 1) * @page_num%>
-<a = href="/meetings/index?page=<%=(@page + 1) %>">[<%= (@page + 1) %>]</a>
+<a = href="/meetings/index?page=<%=(@page + 1) %>">[<%= (@page + 2) %>]</a>
 <% end %>
 
 <br />
 <br />
 
-<%= link_to '[新規作成]', new_meeting_path %> |
-<a href="../../">[HOME]</a>
+<%= link_to '[新規作成]', new_meeting_path %>
 
 <%= javascript_include_tag 'meetings' %>
 
