--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,7 @@
 	<h2>■管理者MENU</h2>
 	<li><%= link_to 'プロジェクト管理', { :controller => 'projects', :action => 'index'}  %></li>
 	<li><%= link_to 'プロジェクト管理（ユーザ登録）', { :controller => 'project_users', :action => 'index'}  %></li>
+	<li>ユーザ一括廃止画面（チェックボックスで一気に廃止：更谷実装予定）</li>
     <% end %>
 </div>
 
