--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing project</h1>
+<h1>プロジェクト編集</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to '[詳細に戻る]', @project %> |
+<%= link_to '[一覧に戻る]', projects_path %>
