--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,7 +1,7 @@
-<h1>New project</h1>
+<h1>プロジェクト登録</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', projects_path %>
+<%= link_to '一覧に戻る', projects_path %>
 
 
