プロジェクトユーザ画面修正

--- a/app/views/project_users/show.html.erb
+++ b/app/views/project_users/show.html.erb
@@ -1,15 +1,18 @@
+﻿<%= javascript_include_tag "application" %>
+
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Project:</b>
+  <b>プロジェクト:</b>
   <%= @project_user.project.name if @project_user.project %>
 </p>
 
 <p>
-  <b>User:</b>
+  <b>ユーザ:</b>
   <%= @project_user.user.user_name if @project_user.user %>
 </p>
 
 
-<%= link_to 'Edit', edit_project_user_path(@project_user) %> |
-<%= link_to 'Back', project_users_path %>
+<%= link_to '[編集]', edit_project_user_path(@project_user) %> |
+<%= link_to '[削除]', @project_user, method: :delete, data: { confirm: '削除しますか?' }  %> |
+<%= link_to '[一覧に戻る]', project_users_path %>
