--- a/app/views/project_users/index.html.erb
+++ b/app/views/project_users/index.html.erb
@@ -1,30 +1,28 @@
 <%= javascript_include_tag "application" %>
-<h1>Listing project_users</h1>
 
-<table>
+<table rules="rows">
   <tr>
-    <th>Project</th>
-    <th>User</th>
+    <th>プロジェクト&nbsp;&nbsp</th>
+    <th>ユーザ&nbsp;&nbsp</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
 
 <% @project_users.each do |project_user| %>
-  <tr>
-      <td><%= project_user.project.name if project_user.project %></td>
-      <td><%= project_user.user.user_name if project_user.user %></td>
-    <td><%= link_to 'Show', project_user %></td>
-    <td><%= link_to 'Edit', edit_project_user_path(project_user) %></td>
+  <tr style="background-color:<%= cycle('FFffFF','#FFff99') %>">
+      <td height="30"><%= project_user.project.name if project_user.project %>&nbsp;&nbsp;&nbsp;&nbsp</td>
+      <td height="30"><%= project_user.user.user_name if project_user.user %>&nbsp;&nbsp;&nbsp;&nbsp</td>
+    <td><%= link_to 'Show', project_user %>&nbsp;&nbsp;&nbsp;&nbsp</td>
+    <td><%= link_to 'Edit', edit_project_user_path(project_user) %>&nbsp;&nbsp;&nbsp;&nbsp</td>
 <% if false %>
-    <td><%= link_to 'Destroy', project_user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', project_user, method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp;&nbsp;&nbsp;&nbsp</td>
 <% end %>
-    <td><%= link_to '削除', project_user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to '削除', project_user, method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp;&nbsp;&nbsp;&nbsp</td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to '新規作成', new_project_user_path %> |
-<a href="../../">[HOME]</a>
+<%= link_to '[新規作成]', new_project_user_path %>
