共通タイトルを固定文字に修正。それに伴い、ミーティング関連の個々の画面にタイトルを出力するように修正。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,7 @@
 <% end %>
 
 <div class="header">
-	<h1><%= @title %></h1>
-	<p><%= @catch_phrase %></p>
+	<h1>ミーティング管理システム</h1>
 </div>
 
 <%= yield %>
